--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,13 @@
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2"><a href="login.html" class="nav-link px-2 link-secondary">Einloggen</a></button>
-        <button type="button" class="btn btn-primary"><a href="registration.html" class="nav-link px-2">Registrieren</a></button>
+        {% if 'user_id' in session %}
+        <a href="{{ url_for('logout') }}" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="{{ url_for('my_account') }}" class="btn btn-primary">Mein Konto</a>
+    {% else %}
+        <a href="{{ url_for('login') }}" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+        <a href="{{ url_for('registration') }}" class="btn btn-primary">Registrieren</a>
+    {% endif %}
       </div>
     </header>
     <div class="container col-xxl-8 px-4 py-5">
