--- a/templates/list.html
+++ b/templates/list.html
@@ -42,7 +42,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="VW_Golf_5.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/VW_Golf_5.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Musterwerg 3 37048 Göttingen </li>
               <li>Hersteller: Volkswagen</li>
@@ -61,7 +61,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Nissan_Micra.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/Nissan_Micra.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Beispielstraße 4 37085 Göttingen </li>
               <li>Hersteller: Nissan</li>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card shadow-sm"><img src="Ford_Focus.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+          <div class="card shadow-sm"><img src="../static/images/Ford_Focus.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Beispielstraße 4 37085 Göttingen</li>
               <li>Hersteller: Ford</li>
@@ -99,7 +99,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="VW_Golf_Variant.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/VW_Golf_Variant.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse:  Beispielstraße 4 37085 Göttingen</li>
               <li>Hersteller: Volkswagen</li>
@@ -118,7 +118,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Hyundai_i20.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/Hyundai_i20.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Beispielstraße 4 37085 Göttingen</li>
               <li>Hersteller: Hyundai</li>
@@ -138,7 +138,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Nissan_Qashqai.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/Nissan_Qashqai.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Musterstraße 1 37085 Göttingen</li>
               <li>Hersteller: Nissan</li>
@@ -158,7 +158,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Honda_Civic.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/Honda_Civic.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Musterweg 3 37048 Göttingen</li>
               <li>Hersteller: Honda</li>
@@ -177,7 +177,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="Ford_Fiesta.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/Ford_Fiesta.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Beispielstraße 4 37085 Göttingen</li>
               <li>Hersteller: Ford</li>
@@ -196,7 +196,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="VW_Tiguan.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/VW_Tiguan.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Musterstraße 1 37085 Göttingen</li>
               <li>Hersteller: Volkswagen</li>
@@ -215,7 +215,7 @@
         </div>
          <div class="col">
           <div class="card shadow-sm">
-            <img src="Mercedes_E350.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
+            <img src="../static/images/Mercedes_E350.jpg" class="bd-placeholder-img card-img-top" alt="Car Image" width="300" height ="290">
             <div class="card-body">
               <li>Adresse: Musterweg 37085 Göttingen</li>
               <li>Hersteller: Mercedes</li>
