--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
     </header>
     <div class="container">
         <h2>Login</h2>
-        <form action="index.html" method="POST">
+        <form action="{{ url_for('login') }}" method="POST">
             <label for="username">Benutzername:</label>
             <input type="text" id="username" name="username" required>
 
