--- a/templates/reservation_success.html
+++ b/templates/reservation_success.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Reservierung</title>
+    <title>Erfolgreich reserviert</title>
     <div class="container">
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -34,34 +34,15 @@
     {% endif %}
       </div>
     </header>
-    <div class="container mt-5">
-        <h2>Reservierung</h2>
-        <form method="POST" action="{{ url_for('reservation_success') }}">
-
-            <div class="form-group">
-                <label for="startDate">Anfangsdatum</label>
-                <input type="date" class="form-control" id="startDate" name="startDate" required>
+    <div class="container col-xxl-8 px-4 py-5 d-flex align-items-center min-vh-100">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+            <div class="col-lg-6 text-center">
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Reserviert!</h1>
             </div>
-            <div class="form-group">
-                <label for="endDate">Enddatum</label>
-                <input type="date" class="form-control" id="endDate" name="endDate" required>
-            </div>
-
-            <div class="form-group">
-                <label for="totalPrice">Gesamter Preis</label>
-                <input type="text" class="form-control" id="totalPrice" name="totalPrice" readonly>
-            </div>
-
-
-            <button type="submit" class="btn btn-primary">Reservierung einreichen</button>
-        </form>
+        </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.8/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <script src="reservation.js"></script>
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  </body>
 </html>
