--- a/templates/search.html
+++ b/templates/search.html
@@ -24,21 +24,21 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="search.html" class="nav-link px-2">Autosuchen</a></li>
-        <li><a href="list.html" class="nav-link px-2">Preisliste</a></li>
-        <li><a href="faq.html" class="nav-link px-2">FAQ</a></li>
-        <li><a href="introduction.html" class="nav-link px-2">Über uns</a></li>
+        <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="/search" class="nav-link px-2">Autosuchen</a></li>
+        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2"><a href="login.html" class="nav-link px-2 link-secondary">Einloggen</a></button>
-        <button type="button" class="btn btn-primary"><a href="registration.html" class="nav-link px-2">Registrieren</a></button>
+        <button type="button" class="btn btn-outline-primary me-2"><a href="/login" class="nav-link px-2 link-secondary">Einloggen</a></button>
+        <button type="button" class="btn btn-primary"><a href="/registration" class="nav-link px-2">Registrieren</a></button>
       </div>
     </header>
     <div class="container mt-5">
         <h2>Auto suchen</h2>
-        <form id="searchForm" method="POST" action="list.html">
+        <form id="searchForm" method="POST" action="/list">
             <div class="form-group">
                 <label for="rentalDate">Datum</label>
                 <input type="date" class="form-control" id="rentalDate" name="rentalDate" required>
