--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -1,5 +1,39 @@
-<!-- HTML Formular für das Hinzufügen von Fahrzeugen -->
-<form id="vehicleForm">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Fahrzeug hinzufügen</title>
+    <div class="container">
+    </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <div class="col-md-3 mb-2 mb-md-0">
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+          <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+      </div>
+
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href='/search' class="nav-link px-2">Autosuchen</a></li>
+        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
+      </ul>
+
+      <div class="col-md-3 text-end">
+        {% if 'user_id' in session %}
+        <a href="/registration" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
+    {% else %}
+        <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+        <a href="/registration" class="btn btn-primary">Registrieren</a>
+    {% endif %}
+      </div>
+    </header><form id="vehicleForm">
     <input type="number" name="standort_id" placeholder="Standort-ID" required>
     <input type="text" name="hersteller" placeholder="Hersteller" required>
     <input type="text" name="modell" placeholder="Modell" required>
