--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAQ</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-
-
-
-<body>
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="container">
+    </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
           <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
@@ -20,16 +17,21 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="search.html" class="nav-link px-2">Autosuchen</a></li>
-        <li><a href="list.html" class="nav-link px-2">Preisliste</a></li>
-        <li><a href="faq.html" class="nav-link px-2">FAQ</a></li>
-        <li><a href="introduction.html" class="nav-link px-2">Über uns</a></li>
+        <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href='/search' class="nav-link px-2">Autosuchen</a></li>
+        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2"><a href="login.html" class="nav-link px-2 link-secondary">Einloggen</a></button>
-        <button type="button" class="btn btn-primary"><a href="registration.html" class="nav-link px-2">Registrieren</a></button>
+        {% if 'user_id' in session %}
+        <a href="/registration" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
+    {% else %}
+        <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+        <a href="/registration" class="btn btn-primary">Registrieren</a>
+    {% endif %}
       </div>
     </header>
 <div class="container px-4 py-5" id="featured-3">
@@ -37,21 +39,18 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Wie viel kostet es, ein Auto zu mieten?</h3>
         <p>Die Kosten für die Anmietung eines Autos hängen von verschiedenen Faktoren ab, wie beispielsweise der Fahrzeugkategorie, dem Vermieter, dem Anmietort und dem Anmietzeitraum. Die Kosten setzen sich in der Regel aus dem Mietpreis und zusätzlichen Gebühren für Extras, wie unter anderem Kindersitze, zusammen.</p>
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Was benötige ich, um ein Fahrzeug zu mieten?</h3>
         <p>Sie benötigen eine gültige Fahrerlaubnis, einen gültigen Reisepass/Personalausweis.</p>
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Wann muss man zahlen?</h3>
         <p>Sie müssen vor der Ablholung Ihres Autos zahlen.</p>
@@ -62,21 +61,18 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Ich bin 17. Darf ich fahren?</h3>
         <p>Das erforderliche Mindestalter für Hauptfahrer und Zusatzfahrer hängt vom Vermieter und der gewählten Fahrzeugkategorie ab. Es kann ein Jungfahrer Zuschlag vom Vermieter erhoben werden. Für höhere Fahrzeugklassen kann es Einschränkungen geben sowie ein vorgeschriebenes Mindestalter. Bitte beachten Sie bei allen Angeboten die jeweils ausgewiesenen Mietbedingungen.</p>
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
         </div>
-        <h3 class="fs-2 text-body-emphasis">Wie kann ich SDJ Autovermietung kontaktieren?</h3>
+        <h3 class="fs-2 text-body-emphasis">Wie kann ich Autovermieten SDJ kontaktieren?</h3>
         <p>Sie können über mehrere Wege z.B. Kontaktformular, per E-Mail, telefonisch mit uns Kontakt treten.</p>
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
         </div>
         <h3 class="fs-2 text-body-emphasis">Wo kann ich ein Auto mieten?</h3>
         <p>Sie können ein Auto an vielen Orten in Göttingen mieten, einschließlich an dem Bahnhof und in Innenstadt. Mit Hilfe der Mietwagensuche auf unserer Webseite können Sie Angebote von über 8.000 Autovermietungsstandorten anfragen, vergleichen und vor Reiseantritt bequem online buchen.</p>
