--- a/templates/header.html
+++ b/templates/header.html
@@ -15,15 +15,15 @@
     </a>
   </div>
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-    <li><a href="search.html" class="nav-link px-2">Autosuchen</a></li>
-    <li><a href="list.html" class="nav-link px-2">Preisliste</a></li>
-    <li><a href="faq.html" class="nav-link px-2">FAQ</a></li>
-    <li><a href="introduction.html" class="nav-link px-2">Über uns</a></li>
+    <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+    <li><a href="/search" class="nav-link px-2">Autosuchen</a></li>
+    <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+    <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+    <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
   </ul>
   <div class="col-md-3 text-end">
-    <a href="login.html" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
-    <a href="registration.html" class="btn btn-primary">Registrieren</a>
+    <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+    <a href="/registration" class="btn btn-primary">Registrieren</a>
   </div>
 </header>
 {% endblock %}
