--- a/templates/list.html
+++ b/templates/list.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Preisliste</title>
+    <title>Liste</title>
+    <div class="container">
+    </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-
   <body>
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
@@ -16,16 +17,21 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="search.html" class="nav-link px-2">Autosuchen</a></li>
-        <li><a href="list.html" class="nav-link px-2">Preisliste</a></li>
-        <li><a href="faq.html" class="nav-link px-2">FAQ</a></li>
-        <li><a href="introduction.html" class="nav-link px-2">Über uns</a></li>
+        <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href='/search' class="nav-link px-2">Autosuchen</a></li>
+        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2"><a href="login.html" class="nav-link px-2 link-secondary">Einloggen</a></button>
-        <button type="button" class="btn btn-primary"><a href="registration.html" class="nav-link px-2">Registrieren</a></button>
+        {% if 'user_id' in session %}
+        <a href="/registration" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
+    {% else %}
+        <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+        <a href="/registration" class="btn btn-primary">Registrieren</a>
+    {% endif %}
       </div>
     </header>
   <main>
@@ -53,7 +59,7 @@
               <li>Farzeugklasse: A</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -72,7 +78,7 @@
               <li>Farzeugklasse: B</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -90,7 +96,7 @@
               <li>Farzeugklasse: B</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -110,7 +116,7 @@
               <li>Farzeugklasse: A</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -129,7 +135,7 @@
               <li>Farzeugklasse: A</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
@@ -149,7 +155,7 @@
               <li>Farzeugklasse: B</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -169,7 +175,7 @@
               <li>Farzeugklasse: C</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -188,7 +194,7 @@
               <li>Farzeugklasse: A</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -207,7 +213,7 @@
               <li>Farzeugklasse: A</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
@@ -226,7 +232,7 @@
               <li>Farzeugklasse: B</li>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="reservation.html" class="nav-link px-2 link-secondary">Reservieren</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/reservation" class="nav-link px-2 link-secondary">Reservieren</a></button>
                 </div>
               </div>
             </div>
