--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registrieren</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-
-<body>
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="container">
+    </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
           <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
@@ -18,16 +17,21 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="search.html" class="nav-link px-2">Autosuchen</a></li>
-        <li><a href="list.html" class="nav-link px-2">Preisliste</a></li>
-        <li><a href="faq.html" class="nav-link px-2">FAQ</a></li>
-        <li><a href="introduction.html" class="nav-link px-2">Über uns</a></li>
+        <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href='/search' class="nav-link px-2">Autosuchen</a></li>
+        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2"><a href="login.html" class="nav-link px-2 link-secondary">Einloggen</a></button>
-        <button type="button" class="btn btn-primary"><a href="registration.html" class="nav-link px-2">Registrieren</a></button>
+        {% if 'user_id' in session %}
+        <a href="/registration" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
+    {% else %}
+        <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+        <a href="/registration" class="btn btn-primary">Registrieren</a>
+    {% endif %}
       </div>
     </header>
     <div class="container mt-5">
@@ -46,20 +50,20 @@
                 <input type="password" class="form-control" id="passwort" name="passwort" required>
             </div>
             <div class="form-group">
-                <label for="geburtstdatum">Geburtsdatum:</label>
-                <input type="date" class="form-control" id="geburtstdatum" name="geburtstdatum" required>
+                <label for="geburtsdatum">Geburtsdatum:</label>
+                <input type="date" class="form-control" id="geburtsdatum" name="geburtsdatum" required>
             </div>
             <div class="form-group">
-                <label for="adressePLZ">PLZ:</label>
-                <input type="number" class="form-control" id="adressePLZ" name="adressePLZ" required>
+                <label for="adresse_plz">PLZ:</label>
+                <input type="number" class="form-control" id="adresse_plz" name="adresse_plz" required>
             </div>
             <div class="form-group">
-                <label for="adresseStrasse">Straße:</label>
-                <input type="text" class="form-control" id="adresseStrasse" name="adresseStrasse" required>
+                <label for="adresse_strasse">Straße:</label>
+                <input type="text" class="form-control" id="adresse_strasse" name="adresse_strasse" required>
             </div>
             <div class="form-group">
-                <label for="adresseWohnort">Wohnort:</label>
-                <input type="text" class="form-control" id="adresseWohnort" name="adresseWohnort" required>
+                <label for="adresse_wohnort">Wohnort:</label>
+                <input type="text" class="form-control" id="adresse_wohnort" name="adresse_wohnort" required>
             </div>
             <div class="form-group">
                 <label for="fuehrerscheinnummer">Führerscheinnummer:</label>
