--- a/templates/registration_success.html
+++ b/templates/registration_success.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Erfolgreich Registriert</title>
+    <title>Erfolgreich registriert</title>
     <div class="container">
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,16 +17,21 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="search.html" class="nav-link px-2">Autosuchen</a></li>
-        <li><a href="list.html" class="nav-link px-2">Preisliste</a></li>
-        <li><a href="faq.html" class="nav-link px-2">FAQ</a></li>
-        <li><a href="introduction.html" class="nav-link px-2">Über uns</a></li>
+        <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href='/search' class="nav-link px-2">Autosuchen</a></li>
+        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
+        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
+        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2"><a href="login.html" class="nav-link px-2 link-secondary">Einloggen</a></button>
-        <button type="button" class="btn btn-primary"><a href="registration.html" class="nav-link px-2">Registrieren</a></button>
+        {% if 'user_id' in session %}
+        <a href="/registration" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
+    {% else %}
+        <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
+        <a href="/registration" class="btn btn-primary">Registrieren</a>
+    {% endif %}
       </div>
     </header>
     <div class="container col-xxl-8 px-4 py-5 d-flex align-items-center min-vh-100">
