--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
       </ul>
 
       <div class="col-md-3 text-end">
-        {% if 'user_id' in session %}
+        {% if 'logged_id' in session %}
         <a href="/registration" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
         <a href="/my_account" class="btn btn-primary">Mein Konto</a>
     {% else %}
