login/registrieren fertig

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
 
       <div class="col-md-3 text-end">
     {% if 'user_id' in session %}
-        <a href="/index" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
-        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
+        <a href="index.html" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="my_account.html" class="btn btn-primary">Mein Konto</a>
     {% else %}
         <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
         <a href="/registration" class="btn btn-primary">Registrieren</a>
