--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,16 @@
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/index" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href='/search' class="nav-link px-2">Autosuchen</a></li>
-        <li><a href="/list" class="nav-link px-2">Preisliste</a></li>
-        <li><a href="/faq" class="nav-link px-2">FAQ</a></li>
-        <li><a href="/introduction" class="nav-link px-2">Über uns</a></li>
+        <li><a href='/list' class="nav-link px-2">Autosuchen</a></li>
+          {% if 'user_id' in session %}
+            <li><a href="/my_reservations" class="nav-link px-2">Meine Reservierungen</a></li>
+          {% endif %}
       </ul>
 
       <div class="col-md-3 text-end">
     {% if 'user_id' in session %}
-        <a href="index.html" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
-        <a href="my_account.html" class="btn btn-primary">Mein Konto</a>
+        <a href="/logout" class="btn btn-outline-primary me-2 link-secondary">Ausloggen</a>
+        <a href="/my_account" class="btn btn-primary">Mein Konto</a>
     {% else %}
         <a href="/login" class="btn btn-outline-primary me-2 link-secondary">Einloggen</a>
         <a href="/registration" class="btn btn-primary">Registrieren</a>
